apply plugin: 'java'
apply plugin: 'maven'

sourceCompatibility = 14
targetCompatibility = 14
version = '1.0'

sourceSets.main.java.srcDirs = ["src/"]

allprojects{
    repositories{
        mavenLocal()
        mavenCentral()
        maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven{ url "https://oss.sonatype.org/content/repositories/releases/" }
        maven{ url 'https://jitpack.io' }
        jcenter()
    }

    tasks.withType(JavaCompile).each{it.options.compilerArgs.add('--enable-preview')}
}

task run(dependsOn: classes, type: JavaExec){
    main = "wikigen.Generator"
    workingDir = new File("../Mindustry/core/assets")
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs += "--enable-preview"
}

dependencies{
    implementation project(":Arc:arc-core")
    implementation project(":Arc:backends:backend-headless")
    implementation project(":Arc:natives:natives-desktop")
    implementation "org.reflections:reflections:0.9.11"
    implementation files("../Mindustry/desktop/build/libs/Mindustry.jar")
}
